--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,65 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>ThebharatrealestateFrontend</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap"
+    rel="stylesheet">
+
+  <!-- Fontawesome 5,6 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <!-- Required style of the theme -->
+  <link rel="stylesheet" href="assets/assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/assets/css/bootstrap-select.min.css">
+  <link rel="stylesheet" href="assets/assets/css/all.min.css">
+  <link rel="stylesheet" href="assets/assets/webfonts/flaticon/flaticon.css">
+  <link rel="stylesheet" href="assets/assets/css/owl.css">
+  <link rel="stylesheet" href="assets/assets/css/jquery.fancybox.min.css">
+  <link rel="stylesheet" href="assets/assets/css/layerslider.css">
+  <link rel="stylesheet" href="assets/assets/css/template.css">
+  <link rel="stylesheet" href="assets/assets/css/style.css">
+  <link rel="stylesheet" href="assets/assets/css/colors/color.css">
+  <link rel="stylesheet" href="assets/assets/css/loader.css">
+
 </head>
+
 <body>
   <app-root></app-root>
+
+  <!-- Javascript Files -->
+  <script src="assets/assets/js/jquery.min.js"></script>
+  <script src="assets/assets/js/popper.min.js"></script>
+  <script src="assets/assets/js/bootstrap.min.js"></script>
+  <script src="assets/assets/js/bootstrap-select.min.js"></script>
+  <script src="assets/assets/js/jquery.fancybox.min.js"></script>
+  <script src="assets/assets/js/owl.js"></script>
+  <script src="assets/assets/js/range/tmpl.js"></script>
+  <script src="assets/assets/js/range/jquery.dependClass.js"></script>
+  <script src="assets/assets/js/range/draggable.js"></script>
+  <script src="assets/assets/js/range/jquery.slider.js"></script>
+  <script src="assets/assets/js/wow.js"></script>
+  <script src="assets/assets/js/mixitup.min.js"></script>
+  <script src="assets/assets/js/paraxify.js"></script>
+  <script src="assets/assets/js/custom.js"></script>
+
 </body>
+
 </html>
