make pages of about and listing and contact

--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,9 @@
   <script src="assets/assets/js/paraxify.js"></script>
   <script src="assets/assets/js/custom.js"></script>
 
+  <script src="assets/assets/js/layerslider.transitions.js"></script>
+  <script src="assets/assets/js/layerslider.kreaturamedia.jquery.js"></script>
+
 </body>
 
 </html>
