--- a/src/index.html
+++ b/src/index.html
@@ -44,12 +44,15 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body class="mat-typography">
+<body>
   <app-root></app-root>
 
   <!-- Javascript Files -->
   <script src="assets/assets/js/jquery.min.js"></script>
   <script src="assets/assets/js/popper.min.js"></script>
+  <script src="assets/assets/js/greensock.js"></script>
+  <script src="assets/assets/js/layerslider.transitions.js"></script>
+  <script src="assets/assets/js/layerslider.kreaturamedia.jquery.js"></script>
   <script src="assets/assets/js/bootstrap.min.js"></script>
   <script src="assets/assets/js/bootstrap-select.min.js"></script>
   <script src="assets/assets/js/jquery.fancybox.min.js"></script>
@@ -62,9 +65,6 @@
   <script src="assets/assets/js/mixitup.min.js"></script>
   <script src="assets/assets/js/paraxify.js"></script>
   <script src="assets/assets/js/custom.js"></script>
-
-  <script src="assets/assets/js/layerslider.transitions.js"></script>
-  <script src="assets/assets/js/layerslider.kreaturamedia.jquery.js"></script>
 
 </body>
 
